--- a/index.html
+++ b/index.html
@@ -3049,14 +3049,17 @@ function mergeLiveRowsIntoUI(items){
     const safeSet = (sel, val) => {
   const el = row.querySelector(sel);
   if (!el) return;
-  if (document.activeElement === el) return; // biar user habis menaip
-  if (el.tagName==='INPUT' || el.tagName==='TEXTAREA'){
-    if (el.type==='checkbox'){
-      if (val !== undefined && val !== null) el.checked = !!val;
+  if (document.activeElement === el) return;
+  if (el.tagName === 'INPUT' || el.tagName === 'TEXTAREA'){
+    if (el.type === 'checkbox'){
+      if (typeof val === 'boolean') el.checked = !!val;
     } else {
       if (val !== undefined && val !== null && val !== '') {
-        el.value = String(val);
-        // jika ada view-mode (inline edit), pantulkan
+        const incoming = String(val);
+        const current  = String(el.value || '');
+        if (current && incoming.length < current.length) return;
+        if (incoming === current) return;
+        el.value = incoming;
         if (el.previousElementSibling && el.previousElementSibling.classList.contains('view-mode')){
           el.previousElementSibling.textContent = el.value;
         }
@@ -3089,9 +3092,9 @@ function mergeLiveRowsIntoUI(items){
 
     // checkbox layak/tak layak – hormati mutual exclusive (guna helper asal)
     const layak   = row.querySelector('.nadi-layak');
-    const takLayak= row.querySelector('.nadi-taklayak');
-    if (layak && document.activeElement !== layak) layak.checked = !!it.layak;
-    if (takLayak && document.activeElement !== takLayak) takLayak.checked = !!it.takLayak;
+const takLayak= row.querySelector('.nadi-taklayak');
+if (layak && document.activeElement !== layak && typeof it.layak === 'boolean') layak.checked = it.layak;
+if (takLayak && document.activeElement !== takLayak && typeof it.takLayak === 'boolean') takLayak.checked = it.takLayak;
 
     // Pantulkan status enable/disable input TCA ikut logik asal
     const tcaDate = row.querySelector('.nadi-tca-date');
@@ -4253,16 +4256,14 @@ function saveNadiStateDebounced(){
     setEnabled(tcaStaff, onTCA);
     setEnabled(vDate, vchr && vchr.checked);
 
-    // Update main button label
     // Update main button label (voucher: aktif serta-merta)
 const btn = row.querySelector('.nadi-daftar');
 if (btn) {
-  const onVoucher = !!(vchr && vchr.checked);        // voucher → ON
-  const onLayak   = !!(layak && layak.checked);       // layak (biasa)
-  btn.disabled = !(onVoucher || onLayak);             // kalau voucher dicentang → terus enabled
+  const onVoucher = !!(vchr && vchr.checked);
+  const onLayak   = !!(layak && layak.checked);
+  btn.disabled = !(onVoucher || onLayak);
   btn.textContent = onVoucher ? 'Daftar TCA' : 'Daftar';
 }
-
   }, true);
 })();
 </script>
@@ -4350,91 +4351,82 @@ if (btn) {
   }, true);
 
   // Initial sweep (if any prefilled rows)
-  cont.querySelectorAll('input').forEach(handle);
+  (document.getElementById('nadiContainer')?.querySelectorAll('input') || []).forEach(handle);
 })();
 </script>
-<!-- ==== PATCH: Robust Google Sign-In init & NADI voucher/Live helpers (safe to add) ==== -->
 <script>
+(function waitGIS(){
+  if (window.google?.accounts?.id) {
+    try { if (typeof initGoogleSignIn === 'function') initGoogleSignIn(); } catch(e){ console.warn(e); }
+  } else {
+    setTimeout(waitGIS, 300);
+  }
+})();
+</script><script>
+// === Patch helpers: Voucher enable & click intercept (non-intrusive) ===
 (function(){
-  // ---------- Google Sign-In: call initGoogleSignIn() once GIS is ready ----------
-  function gsiReady(){ return !!(window.google && google.accounts && google.accounts.id); }
-  function callInit(){
-    if (window.__gsiInitCalled) return;
-    window.__gsiInitCalled = true;
-    try {
-      if (typeof initGoogleSignIn === 'function') initGoogleSignIn();
-    } catch (e) { console.warn('initGoogleSignIn failed:', e); }
-  }
-  if (gsiReady()) { callInit(); }
-  else {
-    var _chk = setInterval(function(){
-      if (gsiReady()){ clearInterval(_chk); callInit(); }
-    }, 300);
-    window.addEventListener('pageshow', function(){ if (gsiReady()) callInit(); }, { once:true });
-  }
-
-  // ---------- NADI: Enable/label "Daftar" button when voucher is checked ----------
+  // Enable button & relabel when voucher toggled
   document.addEventListener('change', function(e){
     const el = e.target;
     if (!el || el.tagName !== 'INPUT') return;
-    if (el.matches('#nadiContainer input[name="voucher"], #nadiContainer .nadi-voucher')) {
-      const tr = el.closest('tr');
-      if (!tr) return;
-      const btn = tr.querySelector('.nadi-daftar');
-      const layak = tr.querySelector('.nadi-layak');
-      if (btn){
-        const enabled = (el.checked === true) || (layak && layak.checked);
-        btn.disabled = !enabled;
-        try { btn.textContent = el.checked ? 'Daftar TCA' : (btn.textContent || 'Daftar'); } catch(_){}
-      }
-      const dateInput = tr.querySelector('input[name="voucherDate"], .nadi-voucher-date');
-      if (dateInput) dateInput.disabled = !el.checked;
+    if (!el.closest('#nadiContainer')) return;
+    if (!(el.matches('input[name="voucher"]') || el.classList.contains('nadi-voucher'))) return;
+    const row = el.closest('tr');
+    if (!row) return;
+    const btn = row.querySelector('.nadi-daftar');
+    const layak = row.querySelector('.nadi-layak');
+    if (btn){
+      const onVoucher = !!el.checked;
+      const onLayak   = !!(layak && layak.checked);
+      btn.disabled = !(onVoucher || onLayak);
+      btn.textContent = onVoucher ? 'Daftar TCA' : 'Daftar';
     }
+    const dateInput = row.querySelector('input[name="voucherDate"], .nadi-voucher-date');
+    if (dateInput) dateInput.disabled = !el.checked;
   }, true);
 
-  // ---------- NADI: Intercept per-row Daftar click when voucher is ticked ----------
+  // Intercept click to perform voucher registration with fallback date
   document.addEventListener('click', async function(e){
     const btn = e.target && e.target.closest('.nadi-daftar');
     if (!btn) return;
     const row = btn.closest('tr');
     const vchr = row && (row.querySelector('input[name="voucher"]') || row.querySelector('.nadi-voucher'));
-    if (!row || !vchr || !vchr.checked) return;
+    if (!row || !vchr || !vchr.checked) return; // not voucher flow
 
     e.preventDefault(); e.stopImmediatePropagation();
 
-    const get = sel => (row.querySelector(sel)?.value || '').trim();
-    const nama   = get('.nadi-nama');
-    const ic     = get('.nadi-ic');
-    const rawTel = get('.nadi-tel');
-    const tel    = (typeof normalizeMsisdnMY === 'function') ? normalizeMsisdnMY(rawTel) : String(rawTel||'').replace(/\D/g,'');
-    const alamat = get('.nadi-alamat');
-
-    const vDateEl = row.querySelector('input[name="voucherDate"], .nadi-voucher-date');
-    const programDate = (document.getElementById('nadiProgramDate')?.value) || new Date().toISOString().slice(0,10);
-    const tarikhTCA = (vDateEl && vDateEl.value) ? vDateEl.value : programDate;
+    const qv = sel => (row.querySelector(sel)?.value || '').trim();
+    const nama   = qv('.nadi-nama');
+    const ic     = qv('.nadi-ic');
+    const telRaw = qv('.nadi-tel');
+    const tel    = (typeof normalizeMsisdnMY === 'function') ? normalizeMsisdnMY(telRaw) : String(telRaw||'').replace(/\D/g,'');
+    const alamat = qv('.nadi-alamat');
+    const vDate  = row.querySelector('input[name="voucherDate"], .nadi-voucher-date')?.value || '';
+    const programDate = document.getElementById('nadiProgramDate')?.value || new Date().toISOString().slice(0,10);
+    const tarikhTCA = vchr.checked && vDate ? vDate : programDate;
 
     if (!nama || !ic || !tel){
-      if (typeof toast === 'function') toast('Ralat', 'Sila isi Nama, IC & Telefon', 'danger');
+      if (typeof toast === 'function') toast('Ralat','Sila isi Nama, IC & Telefon','danger');
       return;
     }
 
     try{
-      const res = await (typeof postForm === 'function'
-        ? postForm({
-            action: 'daftarPesakit',
-            namaPesakit: nama,
-            noIC: ic,
-            noTelefon: tel,
-            alamat: alamat,
-            tarikhTCA: tarikhTCA,
-            masaTCA: '09:00',
-            namaStaff: (window.STAFF_EMAIL || 'SYSTEM')
-          }, { msg: 'Mendaftar pesakit (voucher)…' })
-        : Promise.resolve({ status:'error', message:'postForm tidak tersedia' }));
+      const res = await (typeof postForm === 'function' ? postForm({
+        action: 'daftarPesakit',
+        namaPesakit: nama,
+        noIC: ic,
+        noTelefon: tel,
+        alamat: alamat,
+        tarikhTCA: tarikhTCA,
+        masaTCA: '09:00',
+        namaStaff: (window.STAFF_EMAIL || 'SYSTEM')
+      }, { msg:'Mendaftar pesakit (voucher)…' }) : Promise.resolve({ status:'error', message:'postForm tidak tersedia' }));
 
-      if (res && res.status === 'success') {
-        if (typeof toast === 'function') toast('Berjaya', 'Pesakit berjaya didaftarkan (voucher)', 'success');
-        if (typeof updateNadiRowData === 'function') updateNadiRowData(row);
+      if (res && res.status === 'success'){
+        if (typeof toast === 'function') toast('Berjaya','Pesakit berjaya didaftarkan (voucher)','success');
+        try { updateNadiRowData?.(row); } catch(_){}
+        try { await loadTCACallData?.(); } catch(_){}
+        location.hash = '#tca-call';
       } else {
         throw new Error(res?.message || 'Gagal mendaftar pesakit (voucher)');
       }
@@ -4443,7 +4435,5 @@ if (btn) {
     }
   }, true);
 })();
-</script>
-<!-- ==== /PATCH ==== -->
-</body>
+</script></body>
 </html>
